<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.patinho.logoali.LoginActivity">

        <TextView
            style="@style/Formatacao_textos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_login_activity" />

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/texto_para_digitar_email_login_activity"
            android:inputType="textEmailAddress" />

        <TextView
            style="@style/Formatacao_textos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/senha_login_activity" />

        <EditText
            android:id="@+id/edit_text_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/texto_para_digitar_senha_login_activity"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/botao_logar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/botao_entrar_login_activity" />

    </LinearLayout>

</ScrollView>